--- a/public/demo.html
+++ b/public/demo.html
@@ -200,10 +200,12 @@ var devURLParam = 'https://localhost:9090/';
     <script>
     function ZOHODESK(ZD) {
   ZD.setConfig({
-    clientId: '1000.XG43B4FQ2QNW105754310WC9ZX5S9H',
+    clientId: '1000.MGU7OQJ2LXPJ915667NYI0PUJHAFSH',
     redirectUri:
       'https://vimalesan.herokuapp.com/redirect.html',
     container: document.querySelector('#react'),
+    apiUrl:"deskclientapp.localzoho.com",
+    env:"localzoho",
     organizationName: 'maheshefc',
     style: `
           desk{
