api url https issue fix

--- a/public/demo.html
+++ b/public/demo.html
@@ -204,7 +204,7 @@ var devURLParam = 'https://localhost:9090/';
     redirectUri:
       'https://vimalesan.herokuapp.com/redirect.html',
     container: document.querySelector('#react'),
-    apiUrl:"deskclientapp.localzoho.com",
+    apiUrl:"https://deskclientapp.localzoho.com",
     env:"localzoho",
     organizationName: 'maheshefc',
     style: `
