pointing to desktickets

--- a/public/localzoho.html
+++ b/public/localzoho.html
@@ -201,11 +201,10 @@ var devURLParam = 'https://localhost:9090/';
     function ZOHODESK(ZD) {
   ZD.setConfig({
     clientId: '1000.MGU7OQJ2LXPJ915667NYI0PUJHAFSH',
-    redirectUri:
-      'https://vimalesan.herokuapp.com/redirect.html',
+    redirectUri: 'https://vimalesan.herokuapp.com/redirect.html',
     container: document.querySelector('#react'),
-    apiUrl:"https://deskclientapp.localzoho.com",
-    env:"localzoho",
+    apiUrl: 'https://desktickets.localzoho.com',
+    env: 'localzoho',
     organizationName: 'maheshefc',
     style: `
           desk{
