--- a/public/live.html
+++ b/public/live.html
@@ -171,6 +171,8 @@ function onchangeTicketdet(ticId) {
             <div onclick="viewChange('ticDet')">Ticket Detail </div>
           </div>
           <div class="rgt">
+            <div>Chrome Extension</div>
+            <a href="/zohodesk-injector.crx">Download</a>
               <div id="option"></div>
               <div id="react" class="visHid"></div>
               <div id='ticList' class="visHid"></div>
