--- a/public/localzoho.html
+++ b/public/localzoho.html
@@ -203,7 +203,7 @@ var devURLParam = 'https://localhost:9090/';
     clientId: '1000.MGU7OQJ2LXPJ915667NYI0PUJHAFSH',
     redirectUri: 'https://vimalesan.herokuapp.com/redirect.html',
     container: document.querySelector('#react'),
-    apiUrl: 'https://desksecurity.localzoho.com',
+    apiUrl: 'https://deskclientapp.localzoho.com',
     env: 'localzoho',
     organizationName: 'maheshefc',
     style: `
