--- a/public/live.html
+++ b/public/live.html
@@ -223,7 +223,7 @@ var devURLParam = 'https://localhost:9090/';
 
 <script src='https://localjs.zohostatic.com/support/build/zohostatic/zohodesk-efc-sdk-v1.0.0.js' ></script>
 
-
+<!-- 
     <script>
   ZOHODESK.onload(() => {
   try {
@@ -236,6 +236,6 @@ var devURLParam = 'https://localhost:9090/';
     console.log('error in ur html file....', e);
   }
 });
-</script>
+</script> -->
   </body>
 </html>
