--- a/public/live.html
+++ b/public/live.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="manifest" href="/manifest.webmanifest" />
+    <!-- <link rel="manifest" href="/manifest.webmanifest" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
+    <!-- <link
       rel="preload"
       href="/fonts/zdfonts.ttf"
       as="font"
       type="font/ttf"
       crossorigin="anonymous"
-    ></link>
+    ></link> -->
     <script type="text/javascript">
 function viewChange(value) {
   document.getElementById('react').classList.add('visHid');
