--- a/public/live.html
+++ b/public/live.html
@@ -223,10 +223,10 @@ var devURLParam = 'https://localhost:9090/';
 
 <script src='https://localjs.zohostatic.com/support/build/zohostatic/zohodesk-efc-sdk-v1.0.0.js' ></script>
 
-<!-- 
+ 
     <script>
   ZOHODESK.onload(() => {
-  try {
+   /*  try {
     let deptId = ZOHODESK.get(
       'departmentMapper.' + ZOHODESK.get('routing.paramMap.deptName')
     );
@@ -234,8 +234,8 @@ var devURLParam = 'https://localhost:9090/';
     ZOHODESK.renderContainer('HQDashboard', {}, document.getElementById('hq'));
   } catch (e) {
     console.log('error in ur html file....', e);
-  }
+  }*/
 });
-</script> -->
+</script> 
   </body>
 </html>
