--- a/public/localzoho.html
+++ b/public/localzoho.html
@@ -220,7 +220,7 @@ var devURLParam = 'https://localhost:9090/';
 }
 </script>
 
-<script src='https://localjs.zohostatic.com/support/build/zohostatic/zohodesk-efc-sdk-v1.0.0.js' ></script>
+<script src='https://localjs.zohostatic.com/support/build/zohostatic/zohodesk-efc-sdk-v1.0.0-beta.0.js' ></script>
 
 
     <script>
