--- a/public/localzoho.html
+++ b/public/localzoho.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="manifest" href="/manifest.webmanifest" />
+    <!-- <link rel="manifest" href="/manifest.webmanifest" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="preload"
@@ -220,7 +220,7 @@ var devURLParam = 'https://localhost:9090/';
 }
 </script>
 
-<script src='https://localjs.zohostatic.com/support/build/zohostatic/zohodesk-efc-sdk-v1.0.0-beta.0.js' ></script>
+<script src='https://localjs.zohostatic.com/support/build/zohostatic/zohodesk-efc-sdk-v1.0.0.js' ></script>
 
 
     <script>
