--- a/public/live.html
+++ b/public/live.html
@@ -11,78 +11,73 @@
       crossorigin="anonymous"
     ></link> -->
     <script type="text/javascript">
-function viewChange(value) {
-  document.getElementById('react').classList.add('visHid');
-  document.getElementById('ticList').classList.add('visHid');
-  document.getElementById('ticDet').classList.add('visHid');
+      function viewChange(value) {
+        document.getElementById("react").classList.add("visHid");
+        document.getElementById("ticList").classList.add("visHid");
+        document.getElementById("ticDet").classList.add("visHid");
 
-  document.getElementById(value).classList.remove('visHid');
+        document.getElementById(value).classList.remove("visHid");
 
-  if (value == 'ticDet') {
-    let ticIds = ZOHODESK.get(`module.ticket`) || {};
-    let selectHTML = `<select id='ticdetselect' onchange="onchangeTicketdet()">`;
-    Object.keys(ticIds).forEach(id => {
-      selectHTML += `<option value=${id}>${id} - ${ticIds[id].ticketNumber} - ${
-        ticIds[id].subject
-      } </option>`;
-    });
-    selectHTML += `</select>`;
+        if (value == "ticDet") {
+          let ticIds = ZOHODESK.get(`module.ticket`) || {};
+          let selectHTML = `<select id='ticdetselect' onchange="onchangeTicketdet()">`;
+          Object.keys(ticIds).forEach(id => {
+            selectHTML += `<option value=${id}>${id} - ${ticIds[id].ticketNumber} - ${ticIds[id].subject} </option>`;
+          });
+          selectHTML += `</select>`;
 
-    console.log(selectHTML, 'selectHTML');
-    document.getElementById('option').innerHTML = selectHTML;
+          console.log(selectHTML, "selectHTML");
+          document.getElementById("option").innerHTML = selectHTML;
 
-    onchangeTicketdet(Object.keys(ticIds)[0]);
-  }
-
-  if (value == 'ticList') {
-    let ticIds = ZOHODESK.get(`module.ticket`) || {};
-    let selectHTML = `<select id='ticdetselect' onchange="onchangeTickets()">`;
-    Object.keys(ticIds).forEach(id => {
-      selectHTML += `<option value=${id}>${id} - ${ticIds[id].ticketNumber} - ${
-        ticIds[id].subject
-      } </option>`;
-    });
-    selectHTML += `</select>`;
-
-    console.log(selectHTML, 'selectHTML');
-    document.getElementById('option').innerHTML = selectHTML;
-
-    onchangeTickets(Object.keys(ticIds)[0]);
-  }
-}
-
-function onchangeTickets(depId) {
-  ZOHODESK.renderContainer(
-    'ListItems',
-    {
-      deptId: '402000006623095',
-      module: 'tickets',
-      queries: [
-        {
-          condition: 'is',
-          fieldName: 'Email',
-          value: ['aravind25111@gmail.com']
+          onchangeTicketdet(Object.keys(ticIds)[0]);
         }
-      ]
-    },
-    document.getElementById('ticList')
-  );
-}
 
-function onchangeTicketdet(ticId) {
-  let id = ticId ? ticId : document.getElementById('ticdetselect').value;
-  ZOHODESK.renderContainer(
-    'TicketDetailview',
-    {
-      id: id
-    },
-    document.getElementById('ticDet')
-  );
-}
-</script>
+        if (value == "ticList") {
+          let ticIds = ZOHODESK.get(`module.ticket`) || {};
+          let selectHTML = `<select id='ticdetselect' onchange="onchangeTickets()">`;
+          Object.keys(ticIds).forEach(id => {
+            selectHTML += `<option value=${id}>${id} - ${ticIds[id].ticketNumber} - ${ticIds[id].subject} </option>`;
+          });
+          selectHTML += `</select>`;
+
+          console.log(selectHTML, "selectHTML");
+          document.getElementById("option").innerHTML = selectHTML;
+
+          onchangeTickets(Object.keys(ticIds)[0]);
+        }
+      }
+
+      function onchangeTickets(depId) {
+        ZOHODESK.renderContainer(
+          "ListItems",
+          {
+            deptId: "402000006623095",
+            module: "tickets",
+            queries: [
+              {
+                condition: "is",
+                fieldName: "Email",
+                value: ["aravind25111@gmail.com"]
+              }
+            ]
+          },
+          document.getElementById("ticList")
+        );
+      }
+
+      function onchangeTicketdet(ticId) {
+        let id = ticId ? ticId : document.getElementById("ticdetselect").value;
+        ZOHODESK.renderContainer(
+          "TicketDetailview",
+          {
+            id: id
+          },
+          document.getElementById("ticDet")
+        );
+      }
+    </script>
     <style>
-      select
-      {
+      select {
         padding: 8px 10px;
         border: 1px solid #ddd;
         outline: none;
@@ -90,57 +85,52 @@ function onchangeTicketdet(ticId) {
         background: #fff;
         font-size: 15px;
       }
-    #contacts,#hq,#ticList,#ticDet
-      {
-        width:90%;
-        height:800px;
+      #contacts,
+      #hq,
+      #ticList,
+      #ticDet {
+        width: 90%;
+        height: 800px;
         padding: 10px;
         border: 1px solid #000;
         margin: 20px auto;
       }
 
-      #react
-      {
-          margin: 50px 10px;
-          border: 1px solid #ddd;
-          padding: 10px;
-          min-height: 500px;
+      #react {
+        margin: 50px 10px;
+        border: 1px solid #ddd;
+        padding: 10px;
+        min-height: 500px;
       }
-      main
-      {
+      main {
         height: 100vh;
-        width:100vw;
+        width: 100vw;
         display: flex;
-        flex-direction: column
+        flex-direction: column;
       }
-      .header
-      {
+      .header {
         padding: 10px;
         background: #000;
         color: #fff;
       }
-      .container
-      {
-        flex:1;
+      .container {
+        flex: 1;
         display: flex;
       }
-      .lft
-      {
+      .lft {
         width: 220px;
         border-right: 1px solid #ddd;
         height: 100%;
       }
-      .rgt
-      {
+      .rgt {
         flex: 1;
         margin-top: 0;
 
         overflow: auto;
         padding: 50px;
-        box-sizing: border-box
+        box-sizing: border-box;
       }
-      .lft div
-      {
+      .lft div {
         padding: 10px;
         border-bottom: 1px solid #ddd;
         border-top: 1px solid #ddd;
@@ -148,8 +138,7 @@ function onchangeTicketdet(ticId) {
         margin-bottom: 20px;
         cursor: pointer;
       }
-      .visHid
-      {
+      .visHid {
         visibility: hidden !important;
         height: 0px !important;
         width: 0px !important;
@@ -157,57 +146,50 @@ function onchangeTicketdet(ticId) {
         margin: 0px !important;
         min-height: 0px !important;
       }
-      </style>
+    </style>
   </head>
   <body>
-
-
     <main>
       <div class="header">Embed Funcional Component</div>
       <div class="container">
-          <div class="lft">
-            <div onclick="viewChange('react')">Desk App </div>
-            <div onclick="viewChange('ticList')">Ticket List </div>
-            <div onclick="viewChange('ticDet')">Ticket Detail </div>
-          </div>
-          <div class="rgt">
-            <div>Chrome Extension</div>
-            <a href="/zohodesk-injector.crx">Download</a>
-              <div id="option"></div>
-              <div id="react" class="visHid"></div>
-              <div id='ticList' class="visHid"></div>
-              <div id="ticDet" class="visHid"></div>
-              <div id="hq" class="visHid"></div>
-              <div id="contactsbyticket" class="visHid"></div>
-
-          </div>
+        <div class="lft">
+          <div onclick="viewChange('react')">Desk App</div>
+          <div onclick="viewChange('ticList')">Ticket List</div>
+          <div onclick="viewChange('ticDet')">Ticket Detail</div>
+        </div>
+        <div class="rgt">
+          <div>Chrome Extension</div>
+          <a href="/zohodesk-injector.crx">Download</a>
+          <div id="option"></div>
+          <div id="react" class="visHid"></div>
+          <div id="ticList" class="visHid"></div>
+          <div id="ticDet" class="visHid"></div>
+          <div id="hq" class="visHid"></div>
+          <div id="contactsbyticket" class="visHid"></div>
+        </div>
       </div>
     </main>
 
-
-
-
     <script>
-    viewChange('react');
+      viewChange("react");
 
-var staticDomain = {
-  js: '/',
-  css: '/',
-  images: '/',
-  fonts: '/'
-};
+      var staticDomain = {
+        js: "/",
+        css: "/",
+        images: "/",
+        fonts: "/"
+      };
 
-var devURLParam = 'https://localhost:9090/';
-</script>
+      var devURLParam = "https://localhost:9090/";
+    </script>
     <script>
-    function ZOHODESK(ZD) {
-  ZD.setConfig({
-    clientId: '1000.XG43B4FQ2QNW105754310WC9ZX5S9H',
-    redirectUri:
-      'https://vimalesan.herokuapp.com/redirect.html',
-    container: document.querySelector('#react'),
-    organizationName: 'maheshefc',
-    style: `
+      function ZOHODESK(ZD) {
+        ZD.setConfig({
+          clientId: "1000.XG43B4FQ2QNW105754310WC9ZX5S9H",
+          redirectUri: "https://vimalesan.herokuapp.com/redirect.html",
+          container: document.querySelector("#react"),
+          organizationName: "maheshefc",
+          style: `
           desk{
             background:#fff;
             height:700px;
@@ -217,16 +199,15 @@ var devURLParam = 'https://localhost:9090/';
           },
 
           `
-  });
-}
-</script>
+        });
+      }
+    </script>
 
-<script src='https://localjs.zohostatic.com/support/build/zohostatic/zohodesk-efc-sdk-v1.0.0.js' ></script>
+    <script src="https://localjs.zohostatic.com/support/build/zohostatic/zohodesk-efc-sdk-v1.0.0-beta.0.js"></script>
 
- 
     <script>
-  ZOHODESK.onload(() => {
-   /*  try {
+      ZOHODESK.onload(() => {
+        /*  try {
     let deptId = ZOHODESK.get(
       'departmentMapper.' + ZOHODESK.get('routing.paramMap.deptName')
     );
@@ -235,7 +216,7 @@ var devURLParam = 'https://localhost:9090/';
   } catch (e) {
     console.log('error in ur html file....', e);
   }*/
-});
-</script> 
+      });
+    </script>
   </body>
 </html>
