--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
       <a href="https://www.zoho.com/desk/" id="logo">
         <img name="logo" src="https://img.zohostatic.com/support/app/images/logo.3b82871801fec2d02ebb.png" alt="Zoho Desk">
       </a>
-      <span class="title">Embedded Functional Component</span>
+      <span class="title">Embeddable Functional Component</span>
 
       </div>
 </div>
@@ -230,14 +230,14 @@
 
 
 
-    <h1 id="INTRODUCTION">ZohoDesk Embedded Functional Component</h1>
+    <h1 id="INTRODUCTION">ZohoDesk Embeddable Functional Component</h1>
 
     <p>You may easily embed ZohoDesk functionality into your website in few minutes. Below section guides you to make integration easy</p>
 
 
 <!-- introduction -->
     <h1 id="INTRODUCTION">Introduction</h1>
-    <p>Zohodesk EFC(Embedded Functional Component) is javascript SDK. It provides the following set of features/functionality:</p>
+    <p>Zohodesk EFC(Embeddable Functional Component) is javascript SDK. It provides the following set of features/functionality:</p>
     <ol>
       <ul>
         <li>Full Zoho Desk App</li>
