zoholics issue fix

--- a/public/zoholics.html
+++ b/public/zoholics.html
@@ -161,8 +161,8 @@
           <!-- <div onclick="viewChange('ticDet')">Ticket Detail</div> -->
         </div>
         <div class="rgt">
-          <div>Chrome Extension</div>
-          <a href="/zohodesk-injector.crx">Download</a>
+          <!-- <div>Chrome Extension</div>
+          <a href="/zohodesk-injector.crx">Download</a> -->
           <div id="option"></div>
           <div id="react" class="visHid"></div>
           <div id="ticList" class="visHid"></div>
