--- a/public/zoholics.html
+++ b/public/zoholics.html
@@ -15,6 +15,7 @@
         document.getElementById("react").classList.add("visHid");
         document.getElementById("ticList").classList.add("visHid");
         document.getElementById("ticDet").classList.add("visHid");
+        document.getElementById("hq").classList.add("visHid");
 
         document.getElementById(value).classList.remove("visHid");
 
