--- a/public/localzoho.html
+++ b/public/localzoho.html
@@ -109,14 +109,15 @@
       localStorage.clear();
       function ZOHODESK(ZD) {
         ZD.setConfig({
-          clientId: '1000.MGU7OQJ2LXPJ915667NYI0PUJHAFSH',
-          redirectUri: 'https://vimalesan.herokuapp.com/redirect.html',
-          container: document.querySelector('#react'),
-          apiUrl: 'https://deskautomation2.localzoho.com',
-          env: 'localzoho',
-          organizationName: 'maheshefc',
+          clientId: "1000.MGU7OQJ2LXPJ915667NYI0PUJHAFSH",
+          redirectUri: "https://vimalesan.herokuapp.com/redirect.html",
+          container: document.querySelector("#react"),
+          apiUrl: "https://deskautomation2.localzoho.com",
+          env: "localzoho",
+          organizationName: "maheshefc",
           style: ""
         });
+      }
     </script>
     <script src="https://vimalesan.herokuapp.com/hsdk/zohodesk-efc-sdk-v1.0.0-beta.1.js"></script>
     <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
