--- a/public/localzoho.html
+++ b/public/localzoho.html
@@ -147,7 +147,7 @@
           return (
             <main className="main">
               <header className="header">
-                Embed Funcional Component
+                ZohoDesk Embeddable
                 <div className="tabs">
                   <span
                     onClick={this.onChangeTab.bind(this, "app")}
