--- a/public/live.html
+++ b/public/live.html
@@ -145,7 +145,7 @@
           return (
             <main className="main">
               <header className="header">
-                Embed Funcional Component
+                ZohoDesk Embeddable
                 <div className="tabs">
                   <span
                     onClick={this.onChangeTab.bind(this, "app")}
