--- a/public/live.html
+++ b/public/live.html
@@ -117,7 +117,7 @@
         });
       }
     </script>
-    <script src="https://vimalesan.herokuapp.com/hsdk/zohodesk-efc-sdk-v1.0.0-beta.1.js"></script>
+    <script src="https://localjs.zohostatic.com/support/build/zohodesk-efc-sdk-v1.0.0-beta.1.js"></script>
     <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
