supportlab pointing in live html

--- a/public/live.html
+++ b/public/live.html
@@ -113,6 +113,7 @@
           redirectUri: "https://vimalesan.herokuapp.com/redirect.html",
           container: document.querySelector("#react"),
           organizationName: "maheshefc",
+          apiUrl: "https://supportlab.zoho.com",
           style: ""
         });
       }
