--- a/public/localzoho.html
+++ b/public/localzoho.html
@@ -590,9 +590,9 @@
             //             }
             // }
 
-            let deptId = ZOHODESK.get(
-              'departmentMapper.' + ZOHODESK.get('routing.paramMap.deptName')
-            );
+            // let deptId = ZOHODESK.get(
+            //   'departmentMapper.' + ZOHODESK.get('routing.paramMap.deptName')
+            // );
 
 
 
