changes dev efc for automation

--- a/public/localzoho.html
+++ b/public/localzoho.html
@@ -503,8 +503,8 @@
           }
           componentDidMount()
           {
-            let deptIdsObj = ZOHODESK.get(`departmentMapper`) || {};
-            this.setState({deptIds:deptIdsObj,id:deptIdsObj[0] || null},this.renderHQ)
+            // let deptIdsObj = ZOHODESK.get(`departmentMapper`) || {};
+            // this.setState({deptIds:deptIdsObj,id:deptIdsObj[0] || null},this.renderHQ)
           }
           renderHQ()
           {
