api domain change

--- a/public/localzoho.html
+++ b/public/localzoho.html
@@ -163,7 +163,7 @@
             ZD.setConfig({
               clientId: "1000.MGU7OQJ2LXPJ915667NYI0PUJHAFSH",
               redirectUri: "https://vimalesan.herokuapp.com/redirect.html",
-              apiUrl: 'https://deskclientapp.localzoho.com',
+              apiUrl: 'https://desktelephony.localzoho.com',
               env: 'localzoho',
               style: ``              
             });
